--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 <body>
     <div id="con">
             <div class="head">
-                <h1>VScode用户代码片段生成</h1>                   
+                <h1>VScode用户代码片段生成</h1>
+                <div class="tips">使用方法：配置全局变量后，直接使用自定义名+tab即可快速生成代码片段！
+                    <span">
+                        <img src="/favicon.png">
+                        <a href="https://github.com/xxsirs/vs_usercode_template">Github源码地址</a>
+                    </span>
+                </div>                  
             </div>
             <div class="content">
                 <div class="set">
@@ -27,7 +33,6 @@
                     <div class="con">
                         <textarea id="user_code" cols="65" rows="25" placeholder="请将快速生成的代码粘贴到此处"></textarea>
                     </div>
-                    <div class="tips">使用方法：配置全局变量后，直接使用自定义名+tab即可快速生成代码片段！</div>
                 </div>
                 <div class="result">
                     <textarea id="snippet_result" cols="65" rows="30"></textarea>
@@ -38,6 +43,5 @@
                 <div class="clear"></div>
             </div>
     </div>
-    
 </body>
 </html>
