--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>VScode用户代码片段生成</h1>
                 <div class="tips">使用方法：配置全局变量后，直接使用自定义名+tab即可快速生成代码片段！
                     <span">
-                        <img src="/favicon.png">
+                        <img src="favicon.png">
                         <a href="https://github.com/xxsirs/vs_usercode_template">Github源码地址</a>
                     </span>
                 </div>                  
